--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 	
 	<link rel="stylesheet" href="./css/main.css">
 	<link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
-
+	<script src="./js/main.js"></script>
   </head>
   <body>
 	<div class="container-fluid grilla">
 		<header id="rt-header" class="row cabecera">
 			<div class="flex">
 				<a class="logo" href="./index.html">
-					<img class="logo_img" src="./img/FullColor_1280x1024_300dpi-2-min.jpg" alt="logo" height="120px" width="200px" >
+					<img class="distorcion logo_img" src="./img/FullColor_1280x1024_300dpi-2-min.jpg" alt="logo" height="120px" width="200px" >
 				</a>
 				<a id="logo_nombre" href="./index.html">
 					DogMar
@@ -41,7 +41,7 @@
 		</header>
 		<main id="rt-main" class="cuerpo">
 			<div class="titulo__Parrafo">
-				<img class="img__Sola" src="./img/2017-01-13da.jpg" alt="perrosSaltandoAlAgua" border="5px" width="550px" height="320px">
+				<img style="object-fit: cover;" class="img__Sola" src="./img/2017-01-13da.jpg" alt="perrosSaltandoAlAgua" border="5px" width="550px" height="320px">
 				<h1 class="titulo__Principal" >BIENVENIDOS!</h1>
 				
 				<h2 class="titulo__Secundario">a DogMar servicios para mascotas</h2>
@@ -54,14 +54,14 @@
        		 <!-- Three columns of text below the carousel -->
         	<div class="row">
           <div class="col-lg-3">
-            <img class="rounded-circle" src="./img/serv_2g.png" alt="predio" border="2px" width="140px" height="140px">
+            <img style="object-fit: cover;" class=" rounded-circle" src="./img/serv_2g.png" alt="predio" border="2px" width="140px" height="140px">
             <nav>
             	<a href="./views/servicios.html#alojamiento">Hospedaje y Refugio</a>
             </nav>
             <p class="margenes2">Conocé nuetro establecimiento,</br> horarios de atención y los servicios de calidad que ofrecemos</p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-3">
-            <img class="rounded-circle" src="./img/images.jpeg" alt="fraseAdoptaUnAmigo" border="2px" width="140px" height="140px">
+            <img style="object-fit: cover;" class="rounded-circle" src="./img/images.jpeg" alt="fraseAdoptaUnAmigo" border="2px" width="140px" height="140px">
             <nav>
             	<a href="./views/servicios.html#adopta">
 				Adopción responsable</a>
@@ -69,14 +69,14 @@
           	<p class="margenes2">Información sobre Adopción responsable</p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-3">
-            <img class="rounded-circle" src="./img/index-min.jpg" alt="manoCalificanos" border="2px" width="140px" height="140px">
+            <img style="object-fit: cover;" class=" rounded-circle" src="./img/index-min.jpg" alt="manoCalificanos" border="2px" width="140px" height="140px">
             <nav>
-            	<a href="./views/contacto.html#formulario">Calificanos</a>
+            	<a href="./views/contacto.html#calificanos">Calificanos</a>
             </nav>
             <p class="margenes2">Tu opinión es importante</p>
           </div>
           <div class="col-lg-3">
-            <img class="rounded-circle" src="./img/ventajas_del_adiestramiento_canino-min.jpg" alt="mujerEnseñandoPerros" border="2px" width="140px" height="140px">
+            <img style="object-fit: cover;" class=" rounded-circle" src="./img/ventajas_del_adiestramiento_canino-min.jpg" alt="mujerEnseñandoPerros" border="2px" width="140px" height="140px">
             <nav>
             	<a href="./views/servicios.html#adiestra">Adiestramiento</a>
             </nav>
@@ -91,19 +91,11 @@
 		<footer class="footer">
 			<div id="pie">
 			<ul class="nav">
-				<li><a href="./index.html"><b>Inicio</b></a>
-					<ul>
-						<li><a href="./views/servicios.html#alojamiento">Hospedaje</a></li>
-						<li><a href="./views/servicios.html#refugio">Refugio</a></li>
-						<li><a href="./views/servicios.html#adopta">Adopción Reponsable</a></li>
-						<li><a href="./views/contacto.html#formulario">Calificanos</a></li>
-						<li><a href="./views/servicios.html#adiestra">Adistramiento</a></li>
-					</ul>
-				</li>
+				
 				<li><a href="./views/quienesomos.html"><b>Quienes Somos</b></a>
 					<ul>
 						<li><a href="./views/quienesomos.html#historia">Historia</a></li>
-						<li><a href="./views/quienesomos.html#queOfrecemos">Que Ofrecemos</a></li>
+						<li><a href="./views/quienesomos.html#que__Ofrecemos">Que Ofrecemos</a></li>
 						<li><a href="./views/quienesomos.html#valores">Nuestros Valores</a></li>
 						<li><a href="./views/quienesomos.html#staff">Staff</a></li>
 						<li><a href="./views/quienesomos.html#capacitaciones">Estudios y Capacitaciones</a></li>
@@ -115,7 +107,7 @@
 							<li><a href="./views/servicios.html#refugio">Refugio</a></li>
 							<li><a href="./views/servicios.html#adopta">Adopción Responsable</a></li>
 							<li><a href="./views/servicios.html#adiestra">Adiestramieto Canino</a></li>
-							<li><a href="./views/servicios.html#requisitosSanitarios">Requisitos Sanitarios</a></li>
+							<li><a href="./views/servicios.html#requisitos__Sanitarios">Requisitos Sanitarios</a></li>
 							<li><a href="./views/servicios.html#menu">Conocer antes de hospedar</a></li>
 							<li><a href="./views/servicios.html#informacion">Información</a></li>
 							<li><a href="./views/servicios.html#menu2">Preguntas Frecuentes</a></li>
@@ -141,19 +133,67 @@
 				</li>
 				</ul>
 			</div>
-			<div>
-				<a href="https://www.instagram.com/dogmar4/">
-					<img src="./img/pngtree-instagram-color-icon-png-image_3995406-min.jpg" alt="instagram" width="50px" height="50px">
-				</a>
-				</div>
+			<div class="social-media-links">
+				<ul>
+				  <li>
+					<!-- twitter -->
+					<a href="#">
+					  <svg class="glow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+						<path class="st0" d="M9.5 27.1c11.2 0 17.4-9.3 17.4-17.4 0-0.3 0-0.5 0-0.8 1.2-0.9 2.2-1.9 3-3.2 -1.1 0.5-2.3 0.8-3.5 1 1.3-0.8 2.2-2 2.7-3.4 -1.2 0.7-2.5 1.2-3.9 1.5 -1.1-1.2-2.7-1.9-4.5-1.9 -3.4 0-6.1 2.7-6.1 6.1 0 0.5 0.1 0.9 0.2 1.4C9.7 10.1 5.2 7.7 2.2 4 1.7 4.9 1.4 6 1.4 7.1c0 2.1 1.1 4 2.7 5.1 -1 0-1.9-0.3-2.8-0.8 0 0 0 0.1 0 0.1 0 3 2.1 5.4 4.9 6 -0.5 0.1-1.1 0.2-1.6 0.2 -0.4 0-0.8 0-1.1-0.1 0.8 2.4 3 4.2 5.7 4.2 -2.1 1.6-4.7 2.6-7.6 2.6 -0.5 0-1 0-1.5-0.1C2.8 26.1 6 27.1 9.5 27.1"/>
+					  </svg>
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+						<path class="st0" d="M9.5 27.1c11.2 0 17.4-9.3 17.4-17.4 0-0.3 0-0.5 0-0.8 1.2-0.9 2.2-1.9 3-3.2 -1.1 0.5-2.3 0.8-3.5 1 1.3-0.8 2.2-2 2.7-3.4 -1.2 0.7-2.5 1.2-3.9 1.5 -1.1-1.2-2.7-1.9-4.5-1.9 -3.4 0-6.1 2.7-6.1 6.1 0 0.5 0.1 0.9 0.2 1.4C9.7 10.1 5.2 7.7 2.2 4 1.7 4.9 1.4 6 1.4 7.1c0 2.1 1.1 4 2.7 5.1 -1 0-1.9-0.3-2.8-0.8 0 0 0 0.1 0 0.1 0 3 2.1 5.4 4.9 6 -0.5 0.1-1.1 0.2-1.6 0.2 -0.4 0-0.8 0-1.1-0.1 0.8 2.4 3 4.2 5.7 4.2 -2.1 1.6-4.7 2.6-7.6 2.6 -0.5 0-1 0-1.5-0.1C2.8 26.1 6 27.1 9.5 27.1"/>
+					  </svg>
+					</a>
+				  </li>
+				  <li>
+					<!-- facebook -->
+					<a href="#">
+					  <svg class="glow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+						<path class="st0" d="M28.3 0.1H1.7c-0.9 0-1.6 0.7-1.6 1.6v26.5c0 0.9 0.7 1.6 1.6 1.6H16V18.4h-3.9v-4.5H16v-3.3c0-3.9 2.4-5.9 5.8-5.9 1.6 0 3.1 0.1 3.5 0.2v4l-2.4 0c-1.9 0-2.2 0.9-2.2 2.2v2.9h4.5l-0.6 4.5h-3.9v11.5h7.6c0.9 0 1.6-0.7 1.6-1.6V1.7C29.9 0.8 29.2 0.1 28.3 0.1z"/>
+					  </svg>
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+						<path class="st0" d="M28.3 0.1H1.7c-0.9 0-1.6 0.7-1.6 1.6v26.5c0 0.9 0.7 1.6 1.6 1.6H16V18.4h-3.9v-4.5H16v-3.3c0-3.9 2.4-5.9 5.8-5.9 1.6 0 3.1 0.1 3.5 0.2v4l-2.4 0c-1.9 0-2.2 0.9-2.2 2.2v2.9h4.5l-0.6 4.5h-3.9v11.5h7.6c0.9 0 1.6-0.7 1.6-1.6V1.7C29.9 0.8 29.2 0.1 28.3 0.1z"/>
+					  </svg>
+					</a>
+				  </li>
+				  <li>
+					<!-- youtube -->
+					<a href="#">
+					  <svg class="glow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+						<path class="st0" d="M29.7 9c0 0-0.3-2.1-1.2-3 -1.1-1.2-2.4-1.2-3-1.3C21.3 4.5 15 4.5 15 4.5h0c0 0-6.3 0-10.5 0.3C3.9 4.8 2.6 4.8 1.5 6 0.6 6.9 0.3 9 0.3 9S0 11.4 0 13.9v2.3C0 18.6 0.3 21 0.3 21s0.3 2.1 1.2 3c1.1 1.2 2.6 1.2 3.3 1.3C7.2 25.5 15 25.6 15 25.6s6.3 0 10.5-0.3c0.6-0.1 1.9-0.1 3-1.3 0.9-0.9 1.2-3 1.2-3s0.3-2.4 0.3-4.9v-2.3C30 11.4 29.7 9 29.7 9zM11.9 18.9l0-8.4 8.1 4.2L11.9 18.9z"/>
+					  </svg>
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+						<path class="st0" d="M29.7 9c0 0-0.3-2.1-1.2-3 -1.1-1.2-2.4-1.2-3-1.3C21.3 4.5 15 4.5 15 4.5h0c0 0-6.3 0-10.5 0.3C3.9 4.8 2.6 4.8 1.5 6 0.6 6.9 0.3 9 0.3 9S0 11.4 0 13.9v2.3C0 18.6 0.3 21 0.3 21s0.3 2.1 1.2 3c1.1 1.2 2.6 1.2 3.3 1.3C7.2 25.5 15 25.6 15 25.6s6.3 0 10.5-0.3c0.6-0.1 1.9-0.1 3-1.3 0.9-0.9 1.2-3 1.2-3s0.3-2.4 0.3-4.9v-2.3C30 11.4 29.7 9 29.7 9zM11.9 18.9l0-8.4 8.1 4.2L11.9 18.9z"/>
+					  </svg>
+					</a>
+				  </li>
+				  <li>
+					<!-- instagram -->
+					<a href="https://www.instagram.com/dogmar4/" target="_blank">
+					  <svg class="glow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+						<path class="st0" d="M15 2.8c4 0 4.4 0 6 0.1 1.4 0.1 2.2 0.3 2.8 0.5 0.7 0.3 1.2 0.6 1.7 1.1 0.5 0.5 0.8 1 1.1 1.7C26.8 6.8 27 7.6 27.1 9c0.1 1.6 0.1 2 0.1 6s0 4.4-0.1 6c-0.1 1.4-0.3 2.2-0.5 2.8 -0.3 0.7-0.6 1.2-1.1 1.7 -0.5 0.5-1 0.8-1.7 1.1 -0.5 0.2-1.3 0.4-2.8 0.5 -1.6 0.1-2 0.1-6 0.1s-4.4 0-6-0.1c-1.4-0.1-2.2-0.3-2.8-0.5 -0.7-0.3-1.2-0.6-1.7-1.1 -0.5-0.5-0.8-1-1.1-1.7C3.2 23.2 3 22.4 2.9 21c-0.1-1.6-0.1-2-0.1-6s0-4.4 0.1-6C3 7.6 3.2 6.8 3.4 6.2 3.7 5.5 4 5.1 4.5 4.5c0.5-0.5 1-0.8 1.7-1.1C6.8 3.2 7.6 3 9 2.9 10.6 2.8 11 2.8 15 2.8M15 0.2c-4 0-4.5 0-6.1 0.1C7.3 0.3 6.2 0.6 5.3 0.9c-1 0.4-1.8 0.9-2.6 1.7C1.8 3.5 1.3 4.3 0.9 5.3c-0.4 0.9-0.6 2-0.7 3.6C0.2 10.5 0.1 11 0.1 15c0 4 0 4.5 0.1 6.1 0.1 1.6 0.3 2.7 0.7 3.6 0.4 1 0.9 1.8 1.7 2.6 0.8 0.8 1.7 1.3 2.6 1.7 0.9 0.4 2 0.6 3.6 0.7 1.6 0.1 2.1 0.1 6.1 0.1s4.5 0 6.1-0.1c1.6-0.1 2.7-0.3 3.6-0.7 1-0.4 1.8-0.9 2.6-1.7 0.8-0.8 1.3-1.7 1.7-2.6 0.4-0.9 0.6-2 0.7-3.6 0.1-1.6 0.1-2.1 0.1-6.1s0-4.5-0.1-6.1c-0.1-1.6-0.3-2.7-0.7-3.6 -0.4-1-0.9-1.8-1.7-2.6 -0.8-0.8-1.7-1.3-2.6-1.7 -0.9-0.4-2-0.6-3.6-0.7C19.5 0.2 19 0.2 15 0.2L15 0.2z"/>
+						<path class="st0" d="M15 7.4c-4.2 0-7.6 3.4-7.6 7.6s3.4 7.6 7.6 7.6 7.6-3.4 7.6-7.6S19.2 7.4 15 7.4zM15 20c-2.7 0-5-2.2-5-5s2.2-5 5-5c2.7 0 5 2.2 5 5S17.7 20 15 20z"/>
+						<circle class="st0" cx="22.9" cy="7.1" r="1.8"/>
+					  </svg>
+					  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+						<path class="st0" d="M15 2.8c4 0 4.4 0 6 0.1 1.4 0.1 2.2 0.3 2.8 0.5 0.7 0.3 1.2 0.6 1.7 1.1 0.5 0.5 0.8 1 1.1 1.7C26.8 6.8 27 7.6 27.1 9c0.1 1.6 0.1 2 0.1 6s0 4.4-0.1 6c-0.1 1.4-0.3 2.2-0.5 2.8 -0.3 0.7-0.6 1.2-1.1 1.7 -0.5 0.5-1 0.8-1.7 1.1 -0.5 0.2-1.3 0.4-2.8 0.5 -1.6 0.1-2 0.1-6 0.1s-4.4 0-6-0.1c-1.4-0.1-2.2-0.3-2.8-0.5 -0.7-0.3-1.2-0.6-1.7-1.1 -0.5-0.5-0.8-1-1.1-1.7C3.2 23.2 3 22.4 2.9 21c-0.1-1.6-0.1-2-0.1-6s0-4.4 0.1-6C3 7.6 3.2 6.8 3.4 6.2 3.7 5.5 4 5.1 4.5 4.5c0.5-0.5 1-0.8 1.7-1.1C6.8 3.2 7.6 3 9 2.9 10.6 2.8 11 2.8 15 2.8M15 0.2c-4 0-4.5 0-6.1 0.1C7.3 0.3 6.2 0.6 5.3 0.9c-1 0.4-1.8 0.9-2.6 1.7C1.8 3.5 1.3 4.3 0.9 5.3c-0.4 0.9-0.6 2-0.7 3.6C0.2 10.5 0.1 11 0.1 15c0 4 0 4.5 0.1 6.1 0.1 1.6 0.3 2.7 0.7 3.6 0.4 1 0.9 1.8 1.7 2.6 0.8 0.8 1.7 1.3 2.6 1.7 0.9 0.4 2 0.6 3.6 0.7 1.6 0.1 2.1 0.1 6.1 0.1s4.5 0 6.1-0.1c1.6-0.1 2.7-0.3 3.6-0.7 1-0.4 1.8-0.9 2.6-1.7 0.8-0.8 1.3-1.7 1.7-2.6 0.4-0.9 0.6-2 0.7-3.6 0.1-1.6 0.1-2.1 0.1-6.1s0-4.5-0.1-6.1c-0.1-1.6-0.3-2.7-0.7-3.6 -0.4-1-0.9-1.8-1.7-2.6 -0.8-0.8-1.7-1.3-2.6-1.7 -0.9-0.4-2-0.6-3.6-0.7C19.5 0.2 19 0.2 15 0.2L15 0.2z"/>
+						<path class="st0" d="M15 7.4c-4.2 0-7.6 3.4-7.6 7.6s3.4 7.6 7.6 7.6 7.6-3.4 7.6-7.6S19.2 7.4 15 7.4zM15 20c-2.7 0-5-2.2-5-5s2.2-5 5-5c2.7 0 5 2.2 5 5S17.7 20 15 20z"/>
+						<circle class="st0" cx="22.9" cy="7.1" r="1.8"/>
+					  </svg>
+					</a>
+				  </li>
+				</ul>
+			  </div>
 		</footer>
+	</div>
+
 	
-
-
      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  </body>
+	<script src="./js/main.js"></script>
+</body>
 </html>
